# ILSimu

./: .gitignore  CMakeLists.txt  LPDFilter.fcf
ilserver/: .gitignore  __main__.py  channel.py  complex_helpers.py  constants.py
libils/: constants.py  helpers.py  receiver.py
rasseiver/: CMakeLists.txt  circular_buffer.h  circular_buffer.hpp  config.cpp  config.h  config.hpp  device.h  device.hpp  device_airspy.cpp  device_airspy.h  device_airspy.hpp  device_rspduo.hpp  filter.cpp  filter.hpp  main.cpp  process.hpp  sender.cpp  sender.hpp
rasseiver/examples/: README.md  default-config  minimal-config
rasseiver/src/: circular_buffer.hpp  config.cpp  config.hpp  device.hpp  device_airspy.cpp  device_airspy.hpp  device_dummy.cpp  device_dummy.hpp  device_rspduo.cpp  device_rspduo.hpp  filter.cpp  filter.hpp  main.cpp  process.hpp  sender.cpp  sender.hpp
rasseiver/tests/: test_circular_buffer.cpp  test_circular_buffer.hpp  tests.cpp
receivers/: even.py
tools/: dummyserver.sh  generate-default-config.py  pgo.sh
